# DataWarrior_to_Pandas

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
dwar2pd/: __init__.py  cli.py  decode.mjs  decode.py  package-lock.json  package.json  parser.py
